# blade-virtual-module

./: .gitignore  ChangeLog.md  LICENSE  MANIFEST.in  README.md  README_CN.md  pyproject.toml
Bladex/: __dllexport__.py  __init__.py
Bladex/__ext__/: B3DLib.py  BBLibc.py  BInputc.py  BUIxc.py  Console.py  Raster.py  Traps_C.py  netgame.py
Bladex/__sub__/: b_object.py  b_types.py  character.py  dllexport.py  entity.py  inventory.py
docs/zh-CN/: ChangeLog.md  README.md
misc/: misc.py  test.py
src/Bladex/: __init__.py
src/Bladex/__ext__/: B3DLib.pyi  BBLibc.py  BInputc.pyi  BUIxc.py  BUIxc.pyi  Console.py  Raster.py  Raster.pyi  Traps_C.py  netgame.pyi
src/Bladex/__sub__/: b_object.py  b_types.py  character.py  dllexport.py  entity.py  inventory.py
