# python -m build --sdist # 查看哪些文件会被打包
# python -m build # 使用这个构建包
# python -m twine upload --repository testpypi dist/*
# python -m twine upload dist/*
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Bladex"
# version = "1.0.2"
dynamic = ["version"]
authors = [{ name = "Sryml", email = "sryml@hotmail.com" }]
description = "The Blade of Darkness virtual Python module for code completion and type hints"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Blade of Darkness", "code completion", "type hints"]
classifiers = [
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/Sryml/blade-virtual-module"
"Bug Tracker" = "https://github.com/Sryml/blade-virtual-module/issues"

[tool.setuptools.dynamic]
version = { attr = "Bladex.__VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

#######

[tool.mypy]
# warn_no_return = false
disable_error_code = "empty-body, misc"

[tool.ruff]
#select = []
ignore = ["F4", "E5"]
